--- a/src/index.css
+++ b/src/index.css
@@ -23,3 +23,15 @@ body {
   width: 100%;
 }
 
+@keyframes pulse {
+  0% {
+    opacity: 1;
+  }
+  50% {
+    opacity: 0.5;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
